Removed colourful backgrounds because they are crazy! Also hardcoded canvas height to be height -5 which is dodgy as hell but it was overflowing the viewport and I don't know why yet. Will fix tomorrow'

--- a/ui/src/components/editorView/Canvas/styles.module.css
+++ b/ui/src/components/editorView/Canvas/styles.module.css
@@ -1,4 +1,3 @@
 .canvas {
-  border: 1px solid blue;
-  background-color: white;
+  /*border: 1px solid blue;*/
 }
