--- a/ui/src/components/editorView/ElementSelectorPanel/styles.module.css
+++ b/ui/src/components/editorView/ElementSelectorPanel/styles.module.css
@@ -1,9 +1,7 @@
 .container {
-  border: 1px solid blue;
   -webkit-user-select: none; /* Safari */
          user-select: none;
   height: 100%;
-  background-color: yellow;
 }
 
 .element:hover {
