--- a/ui/src/components/utils/ResizableBox/styles.module.css
+++ b/ui/src/components/utils/ResizableBox/styles.module.css
@@ -1,3 +1,3 @@
 .border {
-  background-color: red;
+  border: 1px solid blue;
 }
